<resources>
    <string name="server_client_id">22352389675-g94c6e05j94btk3hkg8m0qmml0e8blhf.apps.googleusercontent.com</string>
    <string name="app_name">Fischer\'s Playground</string>
    <string name="welcome">Welcome</string>
    <string name="search_players">Search players..</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="confirm_move">Confirm moves</string>
    <string name="field_of_view">Field of View</string>
    <string name="pieces_size">Pieces size</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="move_row_string">%1$d.</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="opening_name">Opening Name</string>
    <string name="which_side_is_the_opening_played">Which side is the opening played?</string>
    <string name="what_is_the_name_of_the_opening">What is the name of the opening?</string>
    <string name="create_variation_dialog_title">What is the name of the variation?</string>
    <string name="create_variation_dialog_hint">Variation Name</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>